refactor: LogService의 fetchAndProcessLogs() 메서드를 searchFromElasticSearch()와 convertResponseToMap()으로 쪼개는 리팩토링 진행